Fix spacing issue and fix css designissue

--- a/ToDoManager/todo.css
+++ b/ToDoManager/todo.css
@@ -4,7 +4,7 @@
 }
 
 #container {
-  display : inline-block;
+  display: inline-block;
   width: 1200px;
   height: auto;
   margin: 0px auto;
@@ -12,12 +12,13 @@
   margin-top: 10px;
   margin-left: 10px;
   border-radius: 10px;
-  padding :10px;
+  padding: 10px;
   text-align: center;
 }
 
 #left_block {
-  display : inline-block;
+  display: inline-block;
+  float: left;
 	width: 700px;
   height: auto;
   margin: 0px auto;
@@ -25,18 +26,19 @@
 }
 
 #right_block {
-  display : inline-block;
-  width: 400px;  
+  display: inline-block;
+  width: 400px;
 }
 
 .button {
-  display : inline-block;
+  display: inline-block;
   margin-left: 50px;
   margin-bottom: 20px;
 }
 
 #todo_list_block {
-  display : inline-block;
+  float: left;
+  display: inline-block;
   width: 700px;
   height: auto;
   margin: 0px auto;
@@ -44,17 +46,17 @@
 }
 
 #lower_right_block {
-  display : inline-block;
+  display: inline-block;
   width: 400px; 
 }
 
-#todoList{ 
-  margin-left:225px;
+#todoList {
+  margin-left: 225px;
   text-align: left
 }
 
-#userList{ 
-  margin-left:153px;
+#userList {
+  margin-left: 153px;
   text-align: left
 }
 
